# rubik-cube

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: cgltf.h.480CF050B591D154.idx  cgltf.h.5B134742EFC8C978.idx  config.h.9FBAC0C8BA775EB9.idx  config.h.DAC368D3AB4A5747.idx  context.c.FA3A70BA39A6D215.idx  context.c.FC3E57E2095D2792.idx  dr_mp3.h.763E90F6C3357BA5.idx  dr_mp3.h.A8F4D48295E0A99E.idx  dr_wav.h.1BEB673414DA511C.idx  dr_wav.h.8FD6359CA4926CF9.idx  egl_context.c.4ABBFF86D63D09EB.idx  egl_context.c.A12426E78E9D1FD3.idx  glad.h.39E5654961DCA675.idx  glad.h.83313B723F657077.idx  glfw3.h.6BD932B46F25700A.idx  glfw3.h.9778CDDE3EE72050.idx  glfw3native.h.2829EB455DBE996D.idx  glfw3native.h.97172E3731964460.idx  glx_context.c.1260C8DED041FF28.idx  glx_context.c.9AA62DDFD1CD76E0.idx  init.c.8EE4F5C47A41B032.idx  init.c.A4AE25F2AC237746.idx  input.c.16A4CAF75CE64590.idx  input.c.E0EB35C267BFF574.idx  internal.h.6226EC119AC570EC.idx  internal.h.9DA54BE5F284ACA9.idx  jar_mod.h.58F6A945D93F169C.idx  jar_mod.h.AF43578D19D38BDA.idx  jar_xm.h.A16D924CD3742E3A.idx  jar_xm.h.B877D8EB70960959.idx  linux_joystick.c.14B986873FBB2110.idx  linux_joystick.c.C8BFBE2F3298DE35.idx  linux_joystick.h.4DA62B23F4D8FF41.idx  linux_joystick.h.68D25E2E7C943362.idx  m3d.h.37FC65617E0A857F.idx  m3d.h.8BB1BD072D55C98C.idx  main.c.349B6836EB53C315.idx  main.c.664DC4D529EDD890.idx  mappings.h.6F031BE5C1226EA9.idx  mappings.h.7CFBD80833BE7CC6.idx  (+116 more)
include/: app.h  colors.h  cube.h
src/: app.c  cube.c  main.c
